--- a/app/views/display1/index.html.erb
+++ b/app/views/display1/index.html.erb
@@ -37,7 +37,7 @@
 
 <div id="display1_header">
   <div class="text-large"><%= image_tag "logo_seti.png" %></div>
-  <div class="text-title" style="padding-left:25px; width:1150px;">Current Observations</div>
+  <div class="text-title" style="padding-left:25px; width:1150px;">Current Observation</div>
   <div class="text-title-dark-blue">Activity ID: <span id="activity-id">?</span></div>
   <div class="float-wall"></div>
 </div>
