--- a/app/views/display1/_beam.html.erb
+++ b/app/views/display1/_beam.html.erb
@@ -23,26 +23,30 @@
   <tr>
     <td colspan="3">
       <div>
-      <div class="text-small" style="float:left;">Past Frequency Coverage</div>
+      <div class="text-small" style="float:left;">Past Frequency Coverage (GHz)</div>
       <div style="float:left; padding-top:2px; padding-left:25px;">
-        <table id="frequency_cover_data_table<%=beam_id%>" class="frequency_cover_data_table">
+        <table id="frequency_cover_data_table<%=beam_id%>" class="frequency_cover_data_table" cellspacing="0" cellpadding="0">
           <tr>
-            <% frequency_num_elements.times do %>
-              <td class="off"></td>
+            <% frequency_num_elements.times do |i| %>
+              <% if i % 10 == 0 %>
+                <td class="off" style="border-left: 1px solid white;"></td>
+              <% else %>
+                <td class="off"></td>
+              <% end %>
             <% end %>
+            <td style="border-left: 1px solid white; background-color:black;"></td>
           </tr>
           <tr>
-            <td class="text-smaller" colspan="10">0.0</td>
-            <td class="text-smaller" colspan="10">1.0</td>
-            <td class="text-smaller" colspan="10">2.0</td>
-            <td class="text-smaller" colspan="10">3.0</td>
-            <td class="text-smaller" colspan="10">4.0</td>
-            <td class="text-smaller" colspan="10">5.0</td>
-            <td class="text-smaller" colspan="10">6.0</td>
-            <td class="text-smaller" colspan="10">7.0</td>
-            <td class="text-smaller" colspan="10">8.0</td>
-            <td class="text-smaller" colspan="10">9.0</td>
-            <td class="text-smaller" colspan="10">10.0</td>
+            <td class="text-smaller label" colspan="10">1.0</td>
+            <td class="text-smaller label" colspan="10">2.0</td>
+            <td class="text-smaller label" colspan="10">3.0</td>
+            <td class="text-smaller label" colspan="10">4.0</td>
+            <td class="text-smaller label" colspan="10">5.0</td>
+            <td class="text-smaller label" colspan="10">6.0</td>
+            <td class="text-smaller label" colspan="10">7.0</td>
+            <td class="text-smaller label" colspan="10">8.0</td>
+            <td class="text-smaller label" colspan="10">9.0</td>
+            <td class="text-smaller label" colspan="10">10.0</td>
           </tr>
         </table>
       </div>
