--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -175,18 +175,24 @@ body {
     background-color: #000000;
 }
 
-.frequency_cover_data_table td.off {
-    background-color: #FF0000;
-    background: -moz-linear-gradient(top, #ff0000, #AA0000);
+.frequency_cover_data_table td {
+    border-left: 1px solid #000000;
     width: 12px;
     height: 15px;
 }
 
+.frequency_cover_data_table td.off {
+    background-color: #FF0000;
+    background: -moz-linear-gradient(top, #ff0000, #AA0000);
+}
+
 .frequency_cover_data_table td.on {
     background-color: #00FF00;
-    background: -moz-linear-gradient(top, #00ff00, #006a00);
-    width: 12px;
-    height: 15px; 
+    background: -moz-linear-gradient(top, #00ff00, #006a00);\
+}
+
+.frequency_cover_data_table td.label {
+    border-left: 1px solid white; padding-left:5px;
 }
 
 .float-wall {
