display2google sky and activity updates for display 1

--- a/app/views/display1/index.html.erb
+++ b/app/views/display1/index.html.erb
@@ -1,7 +1,7 @@
 <div id="display1_header">
   <div class="text-large"><%= image_tag "logo_seti.png" %></div>
-  <div class="text-title" style="padding-left:25px; width:1150px;">Current Observation</div>
-  <div class="text-title-dark-blue">Activity ID: <span id="activity-id">?</span></div>
+  <div class="text-title-yellow" style="padding-left:25px; width:1150px;">Current Observation Status : <span id="current-observation-id">?</span></div>
+  <div class="text-title-yellow">Activity ID: <span id="activity-id">?</span></div>
   <div class="float-wall"></div>
 </div>
 
@@ -94,6 +94,8 @@
       url:      '<%= display1_activity_path %>',
       success:  function(response) {
         $('#activity-id').text(response.id);
+        $('#current-observation-id').text(response.status);
+
       },
       error:    function() {
         // We should handle error here
