--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -55,6 +55,12 @@ body {
     color: #3344ec;
 }
 
+.text-title-yellow {
+    font-weight: bold;
+    font-size: 38px;
+    color: #dddd00;
+}
+
 .waterfall {
     border-width: 2px;
     border-color: #0072ff;
