--- a/app/views/display2/index.html.erb
+++ b/app/views/display2/index.html.erb
@@ -50,7 +50,7 @@
   
       $(document).ready(function()
       {
-        registerElementTimer(function() { updateMapLocation(); }, 10000);
+        registerElementTimer(function() { updateMapLocation(); },  <%= ApplicationController::TIMEOUT_ACTIVITY %>);
       })
   
     </script>
