--- a/app/views/display2/index.html.erb
+++ b/app/views/display2/index.html.erb
@@ -20,7 +20,7 @@
              // sample look at Mars
          var longitude = raToLng('23:14:52.02');
          var latitude  = decToLat('-05:56:40.36');
-         map.setCenter(new GLatLng(latitude, longitude), 10);
+         map.setCenter(new GLatLng(latitude, longitude), 3);
          map.addControl(new GLargeMapControl());
          map.addControl(new GMapTypeControl());
        }
@@ -34,12 +34,49 @@
           type:     'GET',
           url:      '<%= display1_activity_path %>',
           success:  function(response) {
-            // TODO comment out two lines below since this is just testing.
-            response.primaryBeamLocation.ra = 5.68;
-            response.primaryBeamLocation.dec = -2.48;
+             // Clear all overlays and markers
+             map.clearOverlays();
+
+             // construct GLatLng primary beam loc
              var longitude = raToLng(decimalDegreesToString(response.primaryBeamLocation.ra));
              var latitude  = decToLat(decimalDegreesToString(response.primaryBeamLocation.dec));
-             map.panTo(new GLatLng(latitude, longitude));
+             var primary_beam_ll = new GLatLng(latitude, longitude);
+
+             // construct GLatLng fov beam loc
+             var fov_longitude = raToLng(decimalDegreesToString(response.fovBeamLocation.ra));
+             var fov_latitude  = decToLat(decimalDegreesToString(response.fovBeamLocation.dec));
+             var fov_beam_ll = new GLatLng(fov_latitude, fov_longitude);
+  
+             // Covert to pixels because it's easier to draw circle
+             var zoom = map.getZoom();
+             var current_projection = map.getCurrentMapType().getProjection();
+             var pixelxy = current_projection.fromLatLngToPixel(primary_beam_ll,zoom);
+             var fov_pixelxy = current_projection.fromLatLngToPixel(fov_beam_ll,zoom);
+    
+             // Calculate actual pixel distance from the two points
+             var pixel_distance = Math.sqrt(Math.pow(pixelxy.x - fov_pixelxy.x,2) + Math.pow(pixelxy.y - fov_pixelxy.y,2));
+
+             // Add markers to show where FOV and beam loc is (mainly for debugging)
+             var primary_marker = new GMarker(primary_beam_ll);
+             var fov_marker = new GMarker(fov_beam_ll);
+             map.addOverlay(primary_marker);
+             map.addOverlay(fov_marker);
+
+             // Draw circle
+             var degrees = 0;
+             var x, y;
+             var lla = new Array();
+             for(;degrees<=6.50; degrees+=.15)
+               {
+                  y =  pixelxy.y + Math.cos(degrees) * pixel_distance;
+                  x =  pixelxy.x + Math.sin(degrees) * pixel_distance;
+                  var new_pixelxy = new GPoint(x,y);
+                  lla.push(current_projection.fromPixelToLatLng(new_pixelxy,zoom,false));
+               }
+             gp = new GPolygon(lla , "#FFFFFF", 2, 1,"#0000FF",.15);
+             map.addOverlay(gp);
+             gp.show();
+             map.panTo( primary_beam_ll );
           },
           error:    function() {
             // We should handle error here
