--- a/app/views/display2/index.html.erb
+++ b/app/views/display2/index.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
-    <title>Google Maps JavaScript API Example</title>
+    <title>Other Areas of Interest</title>
       <script src="http://maps.google.com/maps?file=api&amp;v=2&amp;key=ABQIAAAAddiIMkMAknNU3D5NS1TU4RT2yXp_ZAY8_ufC3CFXhHIE1NvwkxQU01Mn68JTNFGadfavdmyOXKv-bw" type="text/javascript"></script>
       <script type="text/javascript" src="http://www.google.com/jsapi"></script>
 
@@ -13,11 +13,10 @@
       // Initializes Google Sky Map
       function initialize() {
        if (GBrowserIsCompatible()) {
-
          map = new GMap2(document.getElementById("sky_map"), {
              mapTypes : G_SKY_MAP_TYPES
              });
-             // sample look at Mars
+             // sample look at Mars initially
          var longitude = raToLng('23:14:52.02');
          var latitude  = decToLat('-05:56:40.36');
          map.setCenter(new GLatLng(latitude, longitude), 3);
@@ -75,8 +74,8 @@
                }
              gp = new GPolygon(lla , "#FFFFFF", 2, 1,"#0000FF",.15);
              map.addOverlay(gp);
-             gp.show();
-             map.panTo( primary_beam_ll );
+             gp.show();               // Show the overlay
+             map.panTo( primary_beam_ll );  // Pan center of the map to the primary beam location
           },
           error:    function() {
             // We should handle error here
