show the beam's location and description on display

--- a/app/views/display1/index.html.erb
+++ b/app/views/display1/index.html.erb
@@ -86,8 +86,13 @@
         {
           $('#beam' + id + ' .beam_status').css("background-image", "url(/images/icon_off.png)");
         }
+
+        var longitude = lngToRa(response.ra);
+        var latitude = latToDec(response.dec);
         
         $('#beam' + id + ' .beam_status').text(response.status);
+        $('#beam' + id + ' .beam_location').text(longitude + ' - ' + latitude);
+        $('#beam' + id + ' .beam_description').text(response.description);
         $('#beam' + id + ' .beam_frequency').text(response.freq + ' MHz');
         updateFrequencyCoverage(id, response.freq);
       },
